--- a/SPConfig.hpp.in
+++ b/SPConfig.hpp.in
@@ -9,15 +9,18 @@
 #define SP_CONFIG_H
 
 #include <cstdint>
+#include <chrono>
 
 //Internal definitions and config macros
-#define SP_CONST  inline constexpr  /*!< For global constant definitions */
-#define SP_USE_THREAD_REPORT        /*!< Enable thread report instrumentation */
-#define SP_SHOW_VERSION             /*!< Print version for debugging */
+#define SP_CONST  inline constexpr        /*!< For global constant definitions */
+#define SP_USE_THREAD_REPORT              /*!< Enable thread report instrumentation */
+#define SP_SHOW_VERSION                   /*!< Print version for debugging */
 
 //Global constants
 SP_CONST uint32_t SP_VERSION_MAJOR = @SimpleThreadPool_VERSION_MAJOR@;
 SP_CONST uint32_t SP_VERSION_MINOR = @SimpleThreadPool_VERSION_MINOR@;
 SP_CONST uint32_t SP_VERSION_PATCH = @SimpleThreadPool_VERSION_PATCH@;
+
+SP_CONST std::chrono::milliseconds SP_TERMINATE_NOTIFY_INTERVAL{50};
 
 #endif //SP_CONFIG_H
